WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315155
[AppKit Gestures] Gesture-driven drag-and-drop does not recognize <img> elements
https://bugs.webkit.org/show_bug.cgi?id=315155
Summary
[AppKit Gestures] Gesture-driven drag-and-drop does not recognize <img> elements
Abrar Rahman Protyasha
Reported
2026-05-19 20:15:52 PDT
rdar://177489462
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-05-19 20:45:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65251
EWS
Comment 2
2026-05-20 18:44:27 PDT
Committed
313624@main
(33a1cda45d6c): <
https://commits.webkit.org/313624@main
> Reviewed commits have been landed. Closing PR #65251 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug